Minor codestyle and null checking cleanup